--- a/static/createroutine.css
+++ b/static/createroutine.css
@@ -131,7 +131,7 @@ body {
   cursor: pointer;
   transition: opacity 0.2s ease-in-out;
   text-decoration: none;
-  color: #5f2020;
+  color: #ffffff;
   font-weight: 500;
   text-align: center;
   font-size: 10px;
